--- a/bucket/app/manifest.json
+++ b/bucket/app/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "SWAGYO",
+  "name": "Yuzu Tips",
   "id": "/",
-  "short_name": "Swagyo",
-  "description": "The Best Website where you can find Blogger Widgets, Tech News, Tech Reviews, News & Shopping Crypto related and many more",
+  "short_name": "Yuzu Tips",
+  "description": "Blog Chia Sẻ Các Thủ Thuật Về Công Nghệ, Website, Facebook, Blogger... Và Rất Nhiều Thứ Khác.",
   "version": "1.0",
   "dir": "auto",
   "lang": "en-US",
