--- a/bucket/app/manifest.json
+++ b/bucket/app/manifest.json
@@ -116,7 +116,7 @@
   ],
   "shortcuts": [
     {
-      "name": "SWAGYO NEWS",
+      "name": "Yuzu Tips",
       "short_name": "News",
       "description": "The best news updates with tech & information.",
       "url": "/search/label/News?utm_source=homescreen",
@@ -128,7 +128,7 @@
       ]
     },
     {
-      "name": "SWAGYO SHOP",
+      "name": "Yuzu Tips",
       "short_name": "Shop",
       "description": "The Best Shopping 🛒 with offers & deals.",
       "url": "/search/label/Shop?utm_source=homescreen",
